<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mrawesome.twocents.ui.ViewEventDetailsActivity">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/title_attend_btn"
        android:textSize="30sp"
        android:gravity="center"
        android:translationZ="1dp"
        android:id="@+id/event_details_attend"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/title_cancel_btn"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/event_details_cancel"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <RelativeLayout
        android:id="@+id/info_panel"
        android:layout_width="344dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_details_category">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_centerHorizontal="true"
                android:id="@+id/event_details_icon"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:layout_below="@id/event_details_icon"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/event_details_category"
            android:id="@+id/event_details_name"
            android:text="@string/dummy_text"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_details_host"
            android:layout_toEndOf="@id/event_details_category"
            android:text="@string/dummy_text"
            android:layout_margin="5dp"
            android:layout_below="@id/event_details_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_details_venue"
            android:layout_toEndOf="@id/event_details_category"
            android:text="@string/dummy_text"
            android:layout_margin="5dp"
            android:layout_below="@id/event_details_host"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/event_details_time_slot"
            android:layout_alignParentEnd="true"
            android:text="@string/dummy_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/event_details_schedule"
            android:layout_alignParentEnd="true"
            android:text="@string/dummy_text"
            android:layout_below="@id/event_details_time_slot"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/event_details_participant"
            android:layout_alignParentEnd="true"
            android:text="@string/dummy_text"
            android:layout_below="@id/event_details_schedule"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text"
        android:id="@+id/event_details_description"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/info_panel"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="5dp"
            android:id="@+id/event_details_description_label"
            android:text="@string/event_details_description_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text"
            android:layout_below="@id/event_details_description_label"
            android:id="@+id/event_details_description_text"
            android:padding="5dp"/>

    </RelativeLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/event_details_enter_chatroom"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/event_details_open_chat"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/event_details_description" />


</android.support.constraint.ConstraintLayout>
